refactor(projection): @Value for balance workers + multi-thread pool
Replace System.getenv("BALANCE_WORKER_THREADS") with Spring @Value
binding to ledger.projection.balance.workers (default 2, clamped 1-16).
Configure via Spring property or LEDGER_PROJECTION_BALANCE_WORKERS env
var (Spring relaxed binding).

Convert the single balance worker thread into a FixedThreadPool. Each
worker owns a private scratch list; ConflationQueue.drainTo is already
safe for concurrent drainers via ConcurrentHashMap.remove(key, value)
CAS, so no two workers can grab the same (account, balanceType, ccy)
update. Adds a ledger.projection.balance.workers Prometheus gauge and
a PreDestroy hook for graceful pool shutdown.

Co-authored-by: Cursor <cursoragent@cursor.com>